--- a/style.css
+++ b/style.css
@@ -1,39 +1,47 @@
 :root{
-
-    --branco-principal:#FFFFFF;
-    --cinza-secundario:#C0C0C0;
-    --botao-azul:#167bf7;
-    --cor-de-fundo:#00030c;
+    --branco-principal: #FFFFFF;
+    --cinza-secundario: #C0C0C0;
+    --botao-azul: #167bf7;
+    --cor-de-fundo: #00030C;
 }
 
 body{
-
-    background-color: var(--cor-de-fundo);
-    color: var(--branco-principal);
-} 
+background-color: var(--cor-de-fundo);
+color: var(--branco-principal);
+}
 
 *{
-margin: 0;
-padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .principal{
-
-    background-image: url("Background\ \(1\).png");
-    background-repeat: no-repeat ;
-    background-size: contain ;
+background-image: url("Background\ \(1\).png");
+background-repeat: no-repeat;
+background-size: contain;
 }
 
 .container{
-
-    height: 100vh;
+height: 100vh;
+display: grid;
+grid-template-columns: 50% 50%;
 }
 
-.container-botao{   
- 
+.container-botao{
     background-color: var(--botao-azul);
     border-radius: 5px;
-    padding: 1em;
-    color: var();
+padding: 1em;
+color: var(--branco-principal);
+display: block;
+text-decoration: none;
+}
 
+.botao-secundario{
+background-color: transparent;
+border: 2px solid;
+}
+
+.container-aviso{
+font-size: 12px;
+color: var(--cinza-secundario);
 }
