--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167bf7;
     --cor-de-fundo: #00030C;
-    --fonte-principal: 'Inter';
+    --fonte-principal: 'Inter'
 }
 
 body{
@@ -12,7 +12,6 @@ color: var(--branco-principal);
 font-family: var(--fonte-principal);
 font-size: 16px;
 font-weight: 400;
-
 }
 
 *{
@@ -35,22 +34,23 @@ grid-template-columns: 50% 50%;
 }
 
 .container-botao{
-    background-color: var(--botao-azul);
-    border-radius: 5px;
+
+background-color: var(--botao-azul);
+border-radius: 5px;
 padding: 1em;
 color: var(--branco-principal);
 display: block;
 text-decoration: none;
-}
 
+}
 .botao-secundario{
 background-color: transparent;
 border: 2px solid;
-}
 
-.container-aviso{
-font-size: 12px;
-color: var(--cinza-secundario);
+}
+.contaner-aviso{
+    font-size: 12px;
+    color: var(--cinza-secundario);
 }
 
 .container-titulo{
@@ -59,7 +59,7 @@ font-weight: 700;
 }
 
 .container-imagem{
-margin: 1em 0 2em 0;
+    margin: 1em 0 2em 0;
 }
 
 .container-botao{
@@ -67,11 +67,11 @@ margin-bottom: 1em;
 }
 
 .container-caixa{
-margin: 0 6em;
+margin: 0 6 em;
 }
 
 .secundario-imagem{
-width: 60%;
+width: 80%;
 }
 
 .descrição-titulo{
@@ -79,13 +79,23 @@ font-weight: 700;
 font-size: 48px;
 color: var(--branco-principal);
 margin-bottom: 0.1em;
-} 
+}
 
-.descrição-texto{
-color: var(--cinza-secundario);
+.descriçao-texto{
+    color: var(--cinza-secundario);
 }
 
 .secundario{
-align-items: center;
-margin: 0 10em;
+    align-items: center;
+    margin:0 10em;
+}
+
+.secundario-botao{
+    display: inline-block;
+    margin-top: 1em;
+}
+
+.container-descrição{
+padding: 2em;
+
 }
