--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167bf7;
     --cor-de-fundo: #00030C;
-    --fonte-principal: 'Inter'
+    --fonte-principal:'Inter';
+    --botao-azul-efeito:#3c92fa;
 }
 
 body{
@@ -34,32 +35,30 @@ grid-template-columns: 50% 50%;
 }
 
 .container-botao{
-
 background-color: var(--botao-azul);
 border-radius: 5px;
 padding: 1em;
 color: var(--branco-principal);
 display: block;
 text-decoration: none;
-
 }
+
 .botao-secundario{
 background-color: transparent;
 border: 2px solid;
-
 }
-.contaner-aviso{
-    font-size: 12px;
-    color: var(--cinza-secundario);
+ .container-aviso{
+font-size: 12px;
+color: var(--cinza-secundario);
 }
 
-.container-titulo{
+ .container-titulo{
 font-size: 28px;
 font-weight: 700;
 }
 
-.container-imagem{
-    margin: 1em 0 2em 0;
+ .container-imagem{
+margin: 1em 0 2em 0;
 }
 
 .container-botao{
@@ -67,74 +66,88 @@ margin-bottom: 1em;
 }
 
 .container-caixa{
-margin: 0 6 em;
+margin: 0 6em;
 }
-
-.secundario-imagem{
+ .secundario-imagem{
 width: 80%;
-}
 
+ }
 .descrição-titulo{
 font-weight: 700;
 font-size: 48px;
 color: var(--branco-principal);
 margin-bottom: 0.1em;
 }
-
-.descriçao-texto{
+.descrição-texto{
     color: var(--cinza-secundario);
-}
 
+}
 .secundario{
-    align-items: center;
-    margin:0 10em;
+align-items: center;
+margin: 0 10em;
+
 }
 
 .secundario-botao{
-    display: inline-block;
-    margin-top: 1em;
-}
+display: inline-block;
+margin-top: 1em;
 
+
+}
 .container-descrição{
 padding: 2em;
-}
 
-.dispositivo__lista{
-display: flex;
+}
+.dispositivo-lista{
+    display: flex;
 justify-content: center;
 list-style-type: none;
 margin: 5em 0;
-}
 
+}
 .dispositivos{
-    text-align: center;
-}
+text-align: center;
 
-.dispositivos__titulos{
-   font-size: 48px;
-   color: var(--branco-principal); 
 }
+.dispositivo-titulo{
+font-size: 48px;
+color: var(--branco-principal);
 
-.lista__item{
+}
+.lista-item{
     font-size: 32px;
     color: var(--branco-principal);
 }
-
 .rodape{
-    text-align: center;
-    margin: 5em 3em;
+text-align: center;
+margin: 5em 3em;
 }
-
-.rodape__lista{
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
-    margin-top: 1em;
+.rodape-lista{
+display: flex;
+justify-content: center;
+list-style-type: none;
+margin-top: 1em;
 }
+.rodape-texto{
+margin: 1em 0;
+color: var(--cinza-secundario);
+font-size: 14px;
+}
+.lista-link a{
+ text-decoration: none;
+ color: var(--branco-principal);
+ font-size: 14px;
+ margin-left: 1em;
+}
+.lista-link a:hover{
+color: var(--botao-azul);
 
-.rodape__texto{
-    margin: 1em o;
-    color: var(--cinza-secundario);
-    font-size: 14px;
+}
+.lista-link a:active{
+ color: purple;
 
+}
+.container-botao:hover{
+  background-color: var(--botao-azul-efeito);
+  color: var(--cor-de-fundo);
 }
